feat: add custom security handlers, booking history endpoint, and booking UI integration
backend:
- added CustomAccessDeniedHandler and CustomAuthEntryPoint
- added new endpoint /api/v1/booking/my to fetch user’s full booking history
- centralized RequestMapping with a common base URL for all API endpoints

frontend:
- finished Login Page design and functionality
- added BookingList component to display booking list
- integrated BookingList into SlidePanel with booking iterator
- added SlidePanel showing user’s bookings